fix overflow

--- a/src/components/Chefs/Chefs.css
+++ b/src/components/Chefs/Chefs.css
@@ -2,4 +2,5 @@
 	width: 100%;
 	height: 100vh;
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
